styles/style.css
@font-face {
    font-family: calculator;
    src: url("../fonts/time.ttf")
  }

/*Global Styling*/
html, body, .container{
    height:100%;
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

/*General Classes*/
.row{
    display:flex;
    flex-direction: row;
}

.col{
    display: flex;
    flex-direction: column;
}

/*Page Sections*/
.header{
    justify-content: center;
    align-items: flex-start;
    z-index:1;
    box-shadow: -1px -1px 3px 1px black;
    background-color: white;
}

.main{
    justify-content: center;
    align-items: center;
    gap:8rem;
    flex-grow: 1;
    padding:2rem;
    background-color: rgb(241 241 241);
    flex-wrap:wrap;
}

.footer{
    display:flex;
    justify-content: center;
    align-items: center;
    font-size: 1rem;
    font-weight: 400;
    background-color: #131313;
    color:white;
}


/*Things in Header*/
.header h1{
    margin:0;
    padding:1rem;
    font-family: "Oswald", sans-serif;
    font-weight: 600;
    font-size:1.1rem;
    color: black;
}

/*Things in Footer*/
.github{
    text-decoration: none;
    color: #3048f5;
}

.github:hover{
    color:#bbbff0;
}

#githubLogo{
    height:1rem;
    width:1rem;
}


.description{
    flex-grow:0;
    width:30rem;
    max-width:100%;
}

/*Calculator*/
.calc{
    justify-content: center;
    align-items: center;
    gap: 0.75rem;
    height: 30rem;
    width: 20rem;
    border-radius: 10px;
    background-color: rgb(58, 58, 58);
    box-shadow: 10px 4px 10px 1px black;
    border: 3px solid #3048f5;
    max-width:90%;
}

#calcDisplay{
    height: 4rem;
    width: 17.2rem;
    padding: 0.3rem 1rem 0 0;
    text-align: end;
    font-size: 1.7rem;
    border-radius: 5px;
    background-color:rgb(118 118 118);
    color: white;
    font-family: "calculator";
    max-width:82%;
}

#clear{
    height: 2rem;
    width: 18.2rem;
    font-size:1.2rem;
    color:#3048f5;
    max-width:90%;
}

.buttons{
    gap:0.75rem;
    max-width:90%;
}

button{
    height:4rem;
    width:4rem;
    font-family: "Raleway", sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
    border-radius: 10px;
    border: 1px solid black;    
    box-shadow: 2px 2px 1px 1px black;
    background-color: #ffffff;  
}

button:hover{
    background-color: #dde4fd;
}


.description h2{
    font-size: calc(2rem + 3.5vw);
    margin:0;
    padding:1rem 0;
}
.description p {
    background-color: #3048f5;
    padding: 2rem;
    color: white;
    border-radius: 10px;
    font-family: "Oswald";
    font-size: 1.3rem;
    font-style: italic;
}

